# counselOS

./: .env.example  .gitignore  Makefile  README.md
backend/: main.py  nixpacks.toml  pyproject.toml  requirements.txt  start.sh
backend/agents/: base.py  chat.py  classification.py  intake.py  rag.py  response.py  risk.py
backend/core/: config.py
backend/core/embeddings/: __init__.py  base.py  gemini.py
backend/core/llm/: __init__.py  anthropic.py  base.py
backend/models/: matter.py
backend/orchestrator/: pipeline.py  state.py
backend/rag/: seed_data.py  store.py
backend/tests/: test_chat_agent.py  test_chat_endpoint.py  test_embedding_factory.py  test_llm_factory.py  test_models.py  test_rag_store.py
docs/: architecture.md
docs/plans/: 2026-03-08-results-chatbot-design.md  2026-03-08-results-chatbot.md
docs/superpowers/plans/: 2026-03-13-gemini-embedding-rag.md
docs/superpowers/specs/: 2026-03-13-gemini-embedding-rag-design.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatMessage.tsx  ChatPanel.tsx  IntakeForm.tsx  IntakeResult.tsx  SuggestedChips.tsx
frontend/types/: index.ts
